# pixie-prompts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-release.yml
pixie/prompts/: __init__.py  file_watcher.py  graphql.py  prompt.py  server.py  storage.py  utils.py
tests/: conftest.py  test_file_watcher.py  test_graphql.py  test_prompt.py  test_prompt_management.py  test_prompt_storage.py  test_utils.py
